Use java Map.of() instead of guava ImmutableMap.of()